Fix perks text align

--- a/app/assets/styles/components/_perks.scss
+++ b/app/assets/styles/components/_perks.scss
@@ -27,6 +27,7 @@
 
     @include medium {
       margin-bottom: 0;
+      text-align: left;
     }
   }
 
